# ai-consensus-mcp

./: .gitignore  README.md  config.py  install-skills.sh  pyproject.toml  server.py
agents/: __init__.py  base.py  codex_agent.py  copilot_agent.py  gemini_agent.py  registry.py
models/: __init__.py  council.py  orchestration.py  responses.py
orchestration/: __init__.py  database.py  inbox.py  supervisor.py  task_store.py
providers/: __init__.py  codex.py  copilot.py  gemini.py  subprocess_runner.py
skills/consensus/: SKILL.md
skills/consensus-synthesize/: SKILL.md
skills/council/: SKILL.md
skills/orchestrate/: SKILL.md
tools/: __init__.py  consensus.py  council.py  orchestration.py  single.py
utils/: __init__.py  context_helpers.py  state.py
