[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-consensus-mcp"
version = "0.2.0"
description = "MCP server for parallel AI queries using Gemini and Codex CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Consensus Team" }
]
keywords = ["mcp", "ai", "gemini", "codex", "consensus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp[tasks]>=3.0.0b1",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-consensus-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "providers", "tools", "models", "agents", "orchestration"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
